# team_ijnek

./: .mergify.yml  LICENSE-runswift  README.md  dependencies.repos
.github/workflows/: main.yml
behavior/: CMakeLists.txt  package.xml
bringup/bringup/: package.xml
bringup/ijnek_launch/: CMakeLists.txt  package.xml
bringup/ijnek_launch/launch/: ijnek_launch.py
bringup/ijnek_launch/plotjuggler/: walk.xml
bringup/team_ijnek_launch/: package.xml
bringup/team_ijnek_launch/config/: teams_params.yaml
bringup/team_ijnek_launch/launch/: simulated_player_launch.py
communication/: package.xml
communication/communication/: CMakeLists.txt  package.xml
communication/communication/launch/: communication.launch.py
communication/communication_interfaces/: CMakeLists.txt  package.xml
communication/communication_launch/: CMakeLists.txt  package.xml
ijnek_interfaces/: CMakeLists.txt  package.xml
ijnek_interfaces/msg/: LocalizationTransition.msg
ijnek_interfaces/srv/: SetPoses.srv
ijnek_launch/: CMakeLists.txt  package.xml
ijnek_launch/launch/: ijnek_launch.py  ik_visualization_launch.py  simspark_launch.py  simulation_launch.py  walk_launch.py  walk_visualization_launch.py  webots_launch.py
ijnek_launch/rviz/: walk.rviz
motion/balanced_motion_2/: CMakeLists.txt  package.xml
motion/balanced_motion_2/include/balanced_motion_2/: balanced_motion_2.hpp  dive.hpp  getup.hpp  inverse_kinematics.hpp  linear.hpp  maths_functions.hpp  motion.hpp  motion_defs.hpp  motion_helpers.hpp  motion_transitioner.hpp  stand.hpp  state.hpp  walk.hpp
motion/balanced_motion_2/src/: balanced_motion_2.cpp  inverse_kinematics.cpp  linear.cpp  maths_functions.cpp
motion/balanced_motion_2/test/: CMakeLists.txt  test_transitioner.cpp
motion/crouch/: CMakeLists.txt  package.xml
motion/crouch/include/crouch/: crouch.hpp
motion/crouch/src/: crouch.cpp  crouch_node.cpp
motion/crouch/test/: CMakeLists.txt  test_crouch.cpp
motion/ik_bhuman/: CMakeLists.txt  package.xml
motion/kick/: CMakeLists.txt  package.xml
motion/kick/include/kick/: kick.hpp
motion/kick/src/: kick.cpp  kick_node.cpp
motion/kick/test/: CMakeLists.txt  test_kick.cpp
motion/motion/: package.xml
motion/motion_coordinator/: CMakeLists.txt  package.xml
motion/motion_interfaces/: CMakeLists.txt  package.xml
motion/motion_key_frame/: CMakeLists.txt  package.xml
motion/motion_launch/: CMakeLists.txt  package.xml
motion/motion_launch/launch/: ik.launch.py  ik_visualization_launch.py  motion.launch.py  motion_gazebo.launch.py  motion_launch.py  motion_simspark.launch.py  motion_webots.launch.py  walk_visualization_launch.py
motion/motion_msgs/: CMakeLists.txt  package.xml
motion/motion_transitioner/: CMakeLists.txt  package.xml
motion/motion_transitioner/include/motion_transitioner/: motion.hpp  motion_transitioner.hpp  requests.hpp
motion/motion_transitioner/src/: motion_transitioner.cpp  motion_transitioner_node.cpp
motion/motion_transitioner/test/: CMakeLists.txt  test_motion_transitioner.cpp  test_motion_transitioner_2.cpp
motion/stand/: CMakeLists.txt  package.xml
motion/stand/include/stand/: stand.hpp
motion/stand/src/: stand.cpp
motion/walk/: CMakeLists.txt  README.md  package.xml
motion/walk/include/walk/: step_calculator.hpp  walk.hpp
motion/walk/src/: step_calculator.cpp  walk.cpp  walk_node.cpp
motion/walk/test/: CMakeLists.txt  test_step_calculator.cpp  test_walk.cpp
motion/walk_generator/: CMakeLists.txt  package.xml
motion/walk_generator/include/walk_generator/: crouch_generator.hpp  inverse_kinematics.hpp  maths_functions.hpp  walk_generator.hpp
motion/walk_generator/launch/: walk_launch.py
motion/walk_generator/src/: crouch_generator.cpp  crouch_generator_node.cpp  inverse_kinematics.cpp  inverse_kinematics_node.cpp  maths_functions.cpp  walk_generator.cpp  walk_generator_node.cpp
perception/audio/: CMakeLists.txt  package.xml
perception/perception/: CMakeLists.txt  package.xml
perception/state_estimation/: CMakeLists.txt  package.xml
perception/state_estimation/localization/: CMakeLists.txt  package.xml
perception/state_estimation/localization/config/: pose_resetter.yaml
perception/state_estimation/localization/include/localization/: localization.hpp  localization_transition_detector.hpp  mmcmkf.hpp  pose_resetter.hpp  transition_detector.hpp
perception/state_estimation/localization/launch/: launch.py  localization_launch.py
perception/state_estimation/localization/rUNSWift/: FieldFeatureLocations.cpp  Localiser.cpp  LocaliserTransitioner.cpp  LocaliserTransitioner.hpp
perception/state_estimation/localization/rUNSWift/multimodalcmkf/: CMKFConstants.hpp  MultiModalCMKFParams.cpp  MultiModalCMKFTransitioner.cpp  MultiModalCMKFTransitioner.hpp
perception/state_estimation/localization/src/: cmkf.hpp  cmkf_constants.hpp  localization.cpp  localization_transition_detector.cpp  mmcmkf.cpp  multi_modal_cmkf.cpp  multi_modal_cmkf.hpp  pose_resetter.cpp  pose_resetter_params.yaml  transition_detector.cpp
perception/state_estimation/localization/test/: test_pose_resetter.cpp
perception/state_estimation/state_estimation/: CMakeLists.txt  package.xml
perception/state_estimation/state_estimation/launch/: state_estimation_launch.py
perception/state_estimation/static_pose_publisher/: CMakeLists.txt  package.xml
perception/vision/: package.xml
remote_control/: CMakeLists.txt  README.md  package.xml
remote_control/config/: xbox.config.yaml
simulation/: CMakeLists.txt  package.xml
simulation/launch/: simulation_launch.py  webots_launch.py
state_estimation/static_pose_publisher/: CMakeLists.txt  package.xml
team_ijnek/: CMakeLists.txt  package.xml
team_ijnek_launch/: CMakeLists.txt  package.xml
team_ijnek_launch/launch/: simulated_player_launch.py  simulated_team_launch.py
teleoperation/: CMakeLists.txt  README.md  package.xml
teleoperation/launch/: teleoperation_launch.py
visualization/: CMakeLists.txt  package.xml
visualization/launch/: visualization_launch.py
visualization/rviz/: default.rviz
(+28 files in other folders)
