<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>team_ijnek</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenjibrameld@gmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>behavior</exec_depend>
  <exec_depend>bringup</exec_depend>
  <exec_depend>communication</exec_depend>
  <exec_depend>motion</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>simulation</exec_depend>
  <exec_depend>teleoperation</exec_depend>
  <exec_depend>visualization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
