<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ijnek_launch</name>
  <version>0.0.0</version>
  <description>Example launch files RoboCup Soccer SPL</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>motion_launch</exec_depend>
  <exec_depend>nao_lola_client</exec_depend>
  <exec_depend>rcss3d_nao</exec_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
