<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenjibrameld@gmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>biped_interfaces</exec_depend>
  <exec_depend>nao_ik</exec_depend>
  <exec_depend>nao_lola</exec_depend>
  <exec_depend>nao_phase_provider</exec_depend>
  <exec_depend>rcss3d_nao</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>sole_poses_ims</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>walk</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
