<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walk_generator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nao_sensor_msgs</depend>
  <depend>nao_command_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_interfaces</depend>
  <depend>nao_ik_interfaces</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
